# test-cpp

./: .gitignore  README.md
.github/workflows/: label-publish.yml  pr-checks.yml  pr-publish.yaml  pr-verify.yaml  pr.yaml  release.yaml  release.yml
test/sample1/: USAGE
test/sample1/tether_sum/.github/workflows/: label-publish.yml  label-verify.yml  pr-checks.yml  release.yml
test/sample1/tether_sum/tests/: tether_sum_test.cpp
test/sample1/tether_sum/tether_sum/include/tether_sum/: export.hpp  tether_sum.hpp
test/sample1/tether_sum/tether_sum/src/: tether_sum.cpp
test/sample1/tether_sum_package_test/: conanfile.py  tether_sum_package_test.cpp
test/sample2/: USAGE
test/sample2/tetsum/: CMakeLists.txt  Config.cmake.in  README  conanfile.py
test/sample2/tetsum/include/tetsum/: tetsum.hpp
test/sample2/tetsum/src/: tetsum.cpp
test/sample2/tetsum/tests/: CMakeLists.txt  tetsum_test.cpp
test/sample2/tetsum_consumer/: CMakeLists.txt  README  conanfile.py  main.cpp
tether_sum/: .clang-format  CMakeLists.txt  README  conanfile.py
tether_sum/tests/: tether_sum_test.cpp
tether_sum_package_test/: CMakeLists.txt  README  conanfile.py
tether_sum_package_test/conan-profiles/: macos-clang  macos-clang-armv8
